# stochastic-qubit-surrogate

./: .gitignore  CITATION.cff  Development.md  README.md  THIRD_PARTY_NOTICES.md  generate_arbitrary_noise.m  pyproject.toml  requirements.txt  simulate_qubit_example.m
config/: default.json
docs/: data_schema.md
matlab/: generate_dataset.m
python/: build_dataset.py  train.py
src/qubit_surrogate/: data.py  ml_model.py
tests/: test_data.py  test_model.py
